--- a/mexin/css/base.css
+++ b/mexin/css/base.css
@@ -59,17 +59,60 @@
 	h1, h2, h3, h4, h5, h6 {
 		color: #333;
 		font-family: "Open Sans", Helvetica, Arial, sans-serif; 
-		font-weight: 300; }
-	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit; }
-	h1 { font-size: 49px; line-height: 51px; margin-bottom: 20px; letter-spacing: -0.06em; }
-	h2 { font-size: 35px; line-height: 40px; margin-bottom: 20px; letter-spacing: -0.04em; }
-	h3 { font-size: 28px; line-height: 34px; margin-bottom: 14px; }
-	h4 { font-size: 21px; line-height: 30px; margin-bottom: 12px; }
-	h5 { font-size: 17px; line-height: 24px; margin-bottom: 10px; }
-	h6 { font-size: 14px; line-height: 21px; }
-	.subheader { color: #849098; }
+		font-weight: 300; 
+    }
+
+	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { 
+        font-weight: inherit; 
+    }
+
+	h1 { 
+        font-size: 49px; 
+        line-height: 51px; 
+        margin-bottom: 20px; 
+        letter-spacing: -0.06em; 
+    }
+
+	h2 { 
+        font-size: 35px; 
+        line-height: 40px; 
+        margin-bottom: 20px; 
+        letter-spacing: -0.04em; 
+    }
+
+	h3 { 
+        font-size: 28px; 
+        line-height: 34px; 
+        margin-bottom: 14px; 
+    }
+
+	h4 { 
+        font-size: 21px; 
+        line-height: 30px; 
+        margin-bottom: 12px; 
+    }
+
+	h5 { 
+        font-size: 17px; 
+        line-height: 24px; 
+        margin-bottom: 10px; 
+    }
+
+	h6 { 
+        font-size: 14px; 
+        line-height: 21px; 
+    }
+
+	.subheader { 
+        color: #849098; 
+    }
+
 	h3.magic, h4.magic,
-	h5.magic, h6.magic, p.magic { color: #81898f; font-weight: 500; }
+	h5.magic, h6.magic, p.magic { 
+        color: #81898f; 
+        font-weight: 500; 
+    }
+
 	h5.helvetic5 { font-family:Helvetica, Arial, sans-serif; font-size: 18px; line-height: 24px; margin-bottom:14px; }
 	h1 strong { font-weight:900; letter-spacing: -0.05em; }
 	h3 strong, h4 strong, h5 strong, h6 strong { font-weight:500; }
