--- a/mexin/css/flexslider.css
+++ b/mexin/css/flexslider.css
@@ -25,6 +25,7 @@
 .flexslider .slides > li {display: none; position:relative; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
 .flexslider .slides img {width: 100%; display: block;}
 .flex-pauseplay span {text-transform: capitalize;}
+.flex-pauseplay span {text-transform: capitalize;}
 
 /* Clearfix for the .slides element */
 .slides:after {content: "."; display: block; clear: both; visibility: hidden; line-height: 0; height: 0;} 
@@ -74,7 +75,7 @@ html[xmlns] .slides {display: block; position:relative;}
 
 /* Caption */
 .slide-caption {  padding: 30px; max-width:40%; margin: 0;	position: absolute;	display: block;	left: 90px; bottom: 40px;	background-color: #222;	background: rgba(0, 0, 0, 0.5);}
-.slide-caption h3 {	color: #fff; padding-bottom: 10px;	margin:0; font-weight:400; }
+.slide-caption h3 {	color: #fff; padding-bottom: 10px;	margin:0; font-weight:400; text-transform:uppercase;}
 .slide-caption p {	margin:0;	line-height: 20px;	color: #c9c9c9;}
 
 
