--- a/mexin/css/style.css
+++ b/mexin/css/style.css
@@ -82,14 +82,15 @@ header.sticky { margin: 0; position: fixed; top: 0; z-index: 100; }
 
 /* NAVIGATION BAR  */
 
-.nav-wrap1, .nav-wrap2 { height:83px;  margin-top:-8px; }
+.nav-wrap1, .nav-wrap2 { height:83px;  margin-top:-8px;}
 .nav-wrap2 { margin-top:12px; border-top:1px solid #f0f0f0; margin-bottom:-3px; border-bottom:3px solid #f3f3f3;  }
 .nav-wrap2.mn4 { height:43px; }
+
 
 /* menu icon */
 #menu-icon { display: none; /* hide menu icon initially */}
 
-#nav { float:right;}
+#nav { float: right;}
 #nav li { list-style: none; float:left; padding:0 8px; margin:0 8px; display:block; height:100%; vertical-align:middle; position:relative; }
 span.row-mn {  background:url(../images/row-m1.png) no-repeat right center; width:10px; height:10px; position:absolute; margin-left:12px; right:6px; top:47%; }
 
@@ -921,7 +922,7 @@ input.btn404 { float:left; margin:1px; padding:8px 12px 9px; }
 	.mn-clk { font-size:12px; color:rgba(255,255,255,0.5);}
 	
 	/* main nav */
-	#nav { clear: both; margin:0 auto; background:#fff; left:1px; position: absolute; width: 278px; z-index: 10000; padding:2px 12px 44px 6px;	 border: 1px solid #d2d2d2; border-top:0 none;	display: none; /* visibility will be toggled with jquery */	}
+	#nav { clear: both; margin:0 auto; background:#fff; left:1px; position: absolute;  width: 278px; z-index: 10000; padding:2px 12px 44px 6px;	 border: 1px solid #595959; border-top:0 none;	display: none; /* visibility will be toggled with jquery */	}
 	#nav li, .nav-wrap2 #nav li, .nav-wrap2.mn4 #nav li, .nav-wrap2.mn4.darknavi #nav li  { clear: both; float: none; border:0 none; margin-left:10px; padding:10px 1px 7px; border-bottom:1px solid #e5e5e5; }
 	#nav a, #nav ul a, .nav-wrap2 #nav a, .nav-wrap2.darknavi #nav a, .nav-wrap2.mn4 #nav a { width:auto; height:20px; display:block; text-align:left; border:0 none; padding:2px 3px; margin:0; line-height:1.2; }
 	.nav-wrap2.darknavi #nav li a { color:#595959;}
