--- a/mexin/css/base.css
+++ b/mexin/css/base.css
@@ -624,8 +624,8 @@ a:visited  {
 	  background-color: #ffffff;
 	  border: 1px solid #ccc;
 	  border: 1px solid rgba(0, 0, 0, 0.2);
-	  *border-right-width: 2px;
-	  *border-bottom-width: 2px;
+	  border-right-width: 2px;
+	  border-bottom-width: 2px;
 	  -webkit-border-radius: 5px;
 		 -moz-border-radius: 5px;
 			  border-radius: 5px;
