--- a/mexin/css/base.css
+++ b/mexin/css/base.css
@@ -643,7 +643,7 @@ a:visited  {
 	}
 	
 	.dropdown-menu .divider {
-	  *width: 100%;
+	  width: 100%;
 	  height: 1px;
 	  margin: 8px 1px;
 	  *margin: -5px 0 5px;
@@ -671,7 +671,7 @@ a:visited  {
 	}
 	
 	.open {
-	  *z-index: 1000;
+	  z-index: 1000;
 	}
 	
 	.open > .dropdown-menu {
@@ -825,17 +825,17 @@ a:visited  {
 	}
 	
 	.nav-list .divider {
-	  *width: 100%;
+	  width: 100%;
 	  height: 1px;
 	  margin: 8px 1px;
-	  *margin: -5px 0 5px;
+	  margin: -5px 0 5px;
 	  overflow: hidden;
 	  background-color: #e5e5e5;
 	  border-bottom: 1px solid #ffffff;
 	}
 	.nav-tabs,
 	.nav-pills {
-	  *zoom: 1;
+	  zoom: 1;
 	}
 	
 	.nav-tabs:before,
