--- a/mexin/css/base.css
+++ b/mexin/css/base.css
@@ -84,11 +84,10 @@ a:visited  {
     }
 
 	h2 { 
-        font-size: 3rem; 
+        font-size: 2rem; 
         line-height: 3rem; 
         margin-bottom: 20px; 
         letter-spacing: -0.08em;
-        text-transform: uppercase;
     }
 
 	h3 { 
@@ -646,7 +645,7 @@ a:visited  {
 	  width: 100%;
 	  height: 1px;
 	  margin: 8px 1px;
-	  *margin: -5px 0 5px;
+	  margin: -5px 0 5px;
 	  overflow: hidden;
 	  background-color: #e5e5e5;
 	  border-bottom: 1px solid #ffffff;
@@ -1019,7 +1018,7 @@ a:visited  {
 	}
 	
 	.tabbable {
-	  *zoom: 1;
+	  zoom: 1;
 	}
 	
 	.tabbable:before,
@@ -1157,7 +1156,7 @@ a:visited  {
 	.tabs-right > .nav-tabs .active > a,
 	.tabs-right > .nav-tabs .active > a:hover {
 	  border-color: #e5e5e5 #e5e5e5 #e5e5e5 transparent;
-	  *border-left-color: #ffffff;
+	  border-left-color: #ffffff;
 	}
 	.tabs-right > .tab-content,
 	.tabs-left > .tab-content,
@@ -1291,7 +1290,7 @@ a:visited  {
 	
 	.pagination2 ul {
 	  display: inline-block;
-	  *display: inline;
+	  display: inline;
 	  margin-bottom: 0;
 	  margin-left: 0;
 	  -webkit-border-radius: 3px;
@@ -1476,7 +1475,7 @@ a:visited  {
 	.table-bordered {
 	  border: 1px solid #e5e5e5;
 	  border-collapse: separate;
-	  *border-collapse: collapsed;
+	  border-collapse: collapsed;
 	  border-left: 0;
 	  -webkit-border-radius: 4px;
 		 -moz-border-radius: 4px;
