--- a/mexin/css/base.css
+++ b/mexin/css/base.css
@@ -1296,7 +1296,7 @@ a:visited  {
 	  -webkit-border-radius: 3px;
 		 -moz-border-radius: 3px;
 			  border-radius: 3px;
-	  *zoom: 1;
+	  zoom: 1;
 	  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
 		 -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
 			  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
