--- a/mexin/css/flexslider.css
+++ b/mexin/css/flexslider.css
@@ -49,7 +49,7 @@ html[xmlns] .slides {display: block; position:relative;}
 
 
 /* Direction Nav */
-.flex-direction-nav {*height: 0;}
+.flex-direction-nav {height: 0;}
 .flex-direction-nav a {width: 16px; height: 16px; padding:30px 20px; margin: -46px 0 0; background: rgba(0,0,0,0.9); display: block; position: absolute; top: 50%; z-index: 10; cursor: pointer; opacity: 0;  -webkit-transition: all .19s ease; }
 .flex-direction-nav a i { color:#fff; font-size:16px;}
 .flex-direction-nav a span { display:none;}
@@ -62,7 +62,7 @@ html[xmlns] .slides {display: block; position:relative;}
 
 /* Control Nav */
 .flex-control-nav {width: auto; position: absolute; right:56px; bottom: 36px; text-align: center;}
-.flex-control-nav li {margin: 0 6px; display: inline-block; zoom: 1; *display: inline;}
+.flex-control-nav li {margin: 0 6px; display: inline-block; zoom: 1; display: inline;}
 .flex-control-paging li a {width: 16px; height: 16px; display: block; background: #fff; background: rgba(255,255,255,0.9); cursor: pointer; text-indent: -9999px; -webkit-border-radius: 30px; -moz-border-radius: 30px; -o-border-radius: 30px; border-radius: 30px; }
 .flex-control-paging li a:hover { background: #fff; background: rgba(255,255,255,0.7); }
 .flex-control-paging li a.flex-active { background: #0c78b8; cursor: default; }
