fixing my errors

--- a/mexin/css/flexslider.css
+++ b/mexin/css/flexslider.css
@@ -58,7 +58,7 @@ html[xmlns] .slides {display: block; position:relative;}
 .flexslider:hover .flex-next {opacity: 0.8; }
 .flexslider:hover .flex-prev {opacity: 0.8; }
 .flexslider:hover .flex-next:hover, .flexslider:hover .flex-prev:hover {opacity: 1; background-color: #0c78b8;}
-.flex-direction-nav .flex-disabled {opacity: .3!important; filter:alpha(opacity=30); cursor: default;}
+.flex-direction-nav .flex-disabled {opacity: .3!important;cursor: default;}
 
 /* Control Nav */
 .flex-control-nav {width: auto; position: absolute; right:56px; bottom: 36px; text-align: center;}
