--- a/mexin/css/style.css
+++ b/mexin/css/style.css
@@ -326,10 +326,10 @@ ul.our-clients img { max-width:100%;}
 .footer-in .lts-tweets h5 { color:#82878a; padding:0 10px; font-size:16px; font-weight:400; font-family:"Roboto Slab";}
 
 .flickr-feed { padding-left:10px; margin-bottom:14px;}
-.flickr-feed a { float:left; margin:0 1px 1px 0; opacity: 0.5; filter: alpha(opacity=50);  -webkit-transition: opacity 0.31s ease; -moz-transition: opacity 0.31s ease; -ms-transition: opacity 0.31s ease; -o-transition: opacity 0.31s ease; transition: opacity 0.31s ease;}
-#footer.litex .flickr-feed a { opacity: 0.85; filter: alpha(opacity=85); }
+.flickr-feed a { float:left; margin:0 1px 1px 0; opacity: 0.5;-webkit-transition: opacity 0.31s ease; -moz-transition: opacity 0.31s ease; -ms-transition: opacity 0.31s ease; -o-transition: opacity 0.31s ease; transition: opacity 0.31s ease;}
+#footer.litex .flickr-feed a { opacity: 0.85; filter: }
 .flickr-feed a img { margin:0; width:82px; height:82px; box-shadow: 0px 2px 6px -2px rgba(0,0,0,0.7);  }
-.flickr-feed a:hover, #footer.litex .flickr-feed a:hover { opacity: 1; filter: alpha(opacity=100);}
+.flickr-feed a:hover, #footer.litex .flickr-feed a:hover { opacity: 1; }
 
 .footbot {  margin:0 auto; position:relative; min-height:38px; border-top:5px solid #252627; padding:26px 0 18px; text-align:right; border-top-right-radius:2px; border-top-left-radius:1px; }
 #footer.litex .footbot, #footer.litex .footer-in h4, #footer.litex .footer-in hr { border-color:#e0e0e0; color:#5b5b5b;}
@@ -676,17 +676,17 @@ a.show-all:active { background:#ffe483; border-color:#f7d96c; color:#b29839; }
 .portfolio-item h5 { margin-top:8px;}
 
 .img-item { position:relative; overflow:hidden;}
-.zoomex, .zoomex2 { width: 100%;	background:rgba(0,0,0,.35) url(../images/fancy-big-ico.png) no-repeat center;	opacity:0;	-webkit-transition:all .3s ease-in-out;	-moz-transition:all .3s ease-in-out;	-ms-transition:all .3s ease-in-out;	-o-transition:all .3s ease-in-out;	transition:all .3s ease-in-out;	color: transparent;	display: block;	left: 0;	filter: alpha(opacity=0); 	position: absolute;	top: 0;	bottom:0; } 
+.zoomex, .zoomex2 { width: 100%;	background:rgba(0,0,0,.35) url(../images/fancy-big-ico.png) no-repeat center;	opacity:0;	-webkit-transition:all .3s ease-in-out;	-moz-transition:all .3s ease-in-out;	-ms-transition:all .3s ease-in-out;	-o-transition:all .3s ease-in-out;	transition:all .3s ease-in-out;	color: transparent;	display: block;	left: 0;position: absolute;	top: 0;	bottom:0; } 
 
 .zoomex2 { background:rgba(0,0,0,.42) url(../images/zoomexbg1.png) repeat-x bottom; background:url(../images/zoomexbg1.png) repeat-x bottom\9;}
-.zoomex2 * { filter: alpha(opacity=0)\9;}
+.zoomex2 * { opacity 0}
 .zoomex2 i { color: inherit; font-size:11px; padding:10px; border:2px solid #fff; border-radius:50%;}
 .zoomex2 a.zoomlink1, .zoomex2 a.zoomlink2 { position:absolute; bottom:14%; left:50%; color:#fff; margin-left:-45px; }
 .zoomex2 a.zoomlink2 { margin-left:12px; }
 .zoomex2 a:hover i { color:#0b91d3; border-color:#0b91d3;}
 .zoomex2 h6 { font-weight:bold; color:#fff; font-size:18px; text-align:center; position:absolute; bottom:44%; left:auto; width:100%;}
 
-.img-item:hover .zoomex, .prettyPhoto:hover .zoomex, .img-item:hover .zoomex2, .img-item:hover .zoomex2 * { opacity:1; filter: alpha(opacity=100); }
+.img-item:hover .zoomex, .prettyPhoto:hover .zoomex, .img-item:hover .zoomex2, .img-item:hover .zoomex2 * { opacity:1;}
 #Iframe-Item .zoomex { background:rgba(0,0,0,.5) url(../images/fancy-big-ico2.png) no-repeat center; }
 #Iframe-Item:hover .zoomex { opacity:1; }
 
@@ -820,7 +820,7 @@ img.alignleft { float:left; }
 .moonicons-box1 {font-size: 16px;	display: inline-block;	width: 15em; padding: .25em .5em; background: #fff;	margin: .5em 1em .5em 0; border:1px solid #e8e8e8;}
 
 /* Scroll to top */
-#scroll-top a { width:16px; height:16px; padding:6px 8px 9px; border-radius:4px; background:#818c90; position:fixed; bottom:48px; right:32px; display:none; opacity: 0.89; filter: alpha(opacity=89); z-index:499841;   }
+#scroll-top a { width:16px; height:16px; padding:6px 8px 9px; border-radius:4px; background:#818c90; position:fixed; bottom:48px; right:32px; display:none; opacity: 0.89;z-index:499841;   }
 #scroll-top a i { font-size:16px; color:#fff;}
 #scroll-top a:hover { background-color:#ffcc00; cursor:pointer;}
 
