--- a/mexin/css/base.css
+++ b/mexin/css/base.css
@@ -27,7 +27,7 @@
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 		display: block; }
 	body {
-		line-height: 1; }
+		line-height: 1rem; }
 	ol, ul {
 		list-style: none; }
 	blockquote, q {
@@ -77,10 +77,10 @@ a:visited  {
     }
 
 	h1 { 
-        font-size: 3rem;
+        font-size: 5rem;
         line-height: 5rem;
         letter-spacing: -0.09rem;
-        margin: 0 0 2rem 0;
+        margin: 0 0 5% 0;
     }
 
 	h2 { 
@@ -1615,14 +1615,14 @@ a:visited  {
     .homeinfo {
         overflow: hidden;
         float: left;
-        margin: 0 5%;
+        margin: 0 5% 0 0;
         
     }
 
-    .homecontact {
+  /*  .homecontact {
         overflow: hidden;
         float: right;
         position: absolute;
         margin: 0 20% 0 ;
-    }
+    } */
 
