--- a/mexin/css/style.css
+++ b/mexin/css/style.css
@@ -354,7 +354,8 @@ ul.our-clients img { max-width:100%;}
 .team-member { border-radius: 4px; box-shadow: 0 0 3px rgba(0, 0, 0, 0.2); } 
 .serv-big-pic img, .serv-sm-pic img { border:4px solid #c7d2d7; background:#dae3e7; padding:1px; max-width:100%;  box-shadow: 0px 2px 4px -3px rgba(0,0,0,0.4); -webkit-box-shadow: 0px 2px 5px -3px rgba(0,0,0,0.4);}
 .serv-sm-pic img { background:rgba(0,0,0,0.1); border:3px solid rgba(255,255,255,0.3); box-shadow: 0px 2px 4px -3px rgba(0,0,0,0.7); -webkit-box-shadow: 0px 2px 5px -3px rgba(0,0,0,0.7); }
-.contact-form {  border:5px solid #e9e9e9; text-align:center; padding:20px; padding-bottom:0; border-radius:9px;}
+.contact-form {  border:5px solid #e9e9e9; text-align:center; padding:20px; padding-bottom:0; border-radius:9px; background: #fff;}
+.homecontact { overflow: hidden;float: right;position: absolute;margin: 0 20% 0 ;}
 .contact-form h5 { text-align:left; padding-left:11px; }
 .contact-form .txbx { width:91%; height:36px; border-width:3px; border-radius:4px;  float:none; margin:11px; padding-left:14px; font-size:16px; }
 .contact-form .txbx:focus { border-width:2px; border-radius:2px; }
@@ -919,7 +920,7 @@ input.btn404 { float:left; margin:1px; padding:8px 12px 9px; }
 	#menu-icon { color: rgba(255,255,255,0.7); margin:0 auto; width: 246px; font-size:16px; font-weight:400; height: 30px; border-radius:2px; background: #363f46; padding: 8px 10px 0 42px; cursor: pointer;	 clear:both; box-shadow:  0 2px 2px -2px rgba(0,0,0,0.3); text-align:left;	display: block; /* how menu icon */	}
 	#menu-icon i { font-size:16px; color:rgba(0,0,0,0.6); float:left; margin-left:-28px; margin-top:3px; }
 	#menu-icon:hover, #menu-icon.active {	background-color: #0093d0; }
-	.mn-clk { font-size:12px; color:rgba(255,255,255,0.5);}
+	.mn-clk { font-size:12px; color:rgba(255,255,255,0.5);} 
 	
 	/* main nav */
 	#nav { clear: both; margin:0 auto; background:#fff; left:1px; position: absolute;  width: 278px; z-index: 10000; padding:2px 12px 44px 6px;	 border: 1px solid #595959; border-top:0 none;	display: none; /* visibility will be toggled with jquery */	}
@@ -1050,6 +1051,7 @@ input.btn404 { float:left; margin:1px; padding:8px 12px 9px; }
 	 .sidebar.leftside { background-position: 295px; padding-right:70px; }
 	 .blog-date-sec h3 { font-size:36px;}
 	 #nav li { padding:0 10px; margin:0 10px; }
+    
 	
 	 }
 	 
@@ -1059,6 +1061,7 @@ input.btn404 { float:left; margin:1px; padding:8px 12px 9px; }
 	/* ensure #nav is visible on desktop version */
 	#nav {	display: block !important;	}
 	.ls-layer h1, .ls-layer h3 { left:10px;}
+    .contact-form {float:none;}    
 
 	}
 
